<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tooltipText="@string/main_text"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/unnamed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="-91dp">

        <Button
            android:id="@+id/button_next"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_button_next_activiti"
            android:layout_gravity="center_vertical|center_horizontal"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <Button
            android:id="@+id/button_fragments"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/text_button_fragment"

            />
        <Button
            android:id="@+id/button_material"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/text_button_material"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>